--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 
 <head>
-	<title> Nasus is the future </title>
+	<title> Ali is the answer </title>
 </head>
 
 <body>
-	<h1>Nasus has big PEEPEE <333333</h1>
-	<img src="nasus.jpg" width=1920 height=1080 >
+	<h1> Hello Guys, My name is Ali and I don't touch grass  <333333</h1>
+	<img src="me.jpg">
+	<img src="hasoon.png">
 </body>
