--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <body>
 	<h1> Hello Guys, My name is Ali and I don't touch grass  <333333</h1>
-	<img src="me.jpg">
-	<img src="hasoon.png">
+	<img src="me.jpg" height=500 width=250>
+	<img src="hasoon.png" heigh=500 width=300>
 </body>
+
+</html>
