--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1> Hello Guys, My name is Ali and I don't touch grass  <333333</h1>
 	<img src="me.jpg" height=500 width=250>
 	<img src="hasoon.png" heigh=500 width=300>
-	<h1> This class is my favourite</h1>
+	<h1> Francesca Clara and the GOAT himself ANDREA</h1>
 </body>
 
 </html>
