--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<img src="me.jpg" height=500 width=250>
 	<img src="hasoon.png" heigh=500 width=300>
 	<h1> Francesca Clara and the GOAT himself ANDREA</h1>
+
+	<h2> The Knights Of the Class</h2>
+	<p> Jaocbo, Cameron and Alexey</p>
 </body>
 
 </html>
