--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h1> Francesca Clara and the GOAT himself ANDREA</h1>
 
 	<h2> The Knights Of the Class</h2>
-	<p> Jaocbo, Cameron and Alexey</p>
+	<p> Jaocbo, Cameron, Alexey and Aitla</p>
 </body>
 
 </html>
