--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 	<h1> Francesca Clara and the GOAT himself ANDREA</h1>
 
 	<h2> The Knights Of the Class</h2>
-	<p> Jaocbo, Cameron, Alexey and Aitla</p>
+	<p> Knight no.1 Jacobo </p>
+	<p> Knight no.2 Alexey </p>
+	<p> Knight no.3 Cameron </p>
+	<p> Knight no.4 Atila </p>
+	<p> Knight no.5 Cian </p>
+	
 </body>
 
 </html>
