--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<h1> The newest Kings Guard -> Roisin The Cruel </h1>
 
 	<h2> The Knights Of the Class</h2>
-	<p> Knight no.1 Jacobo </p>
-	<p> Knight no.2 Alexey </p>
-	<p> Knight no.3 Cameron </p>
-	<p> Knight no.4 Atila </p>
-	<p> Knight no.5 Cian </p>
+	<p> Knight no.1 Jacobo The Great </p>
+	<p> Knight no.2 Alexey The Brains </p>
+	<p> Knight no.3 Cameron The Obedient </p>
+	<p> Knight no.4 Atila The Waffler </p>
+	<p> Knight no.5 Cian The Bloody </p>
 	
 </body>
 
