--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <head>
 	<title> Ali is the answer </title>
+	<style>
+		body {
+			background-color:#317560;
+			text-align:center;
+
+		}
+
+		
+	</style>
 </head>
 
 <body>
