--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
                         <img src="https://pics.craiyon.com/2023-06-30/592a0c556ea44b5e873c2506be9adc60.webp" alt="Council Member 4">
                         <p>Andrea The Unbeaten</p>
                     </div>
+                    <div class="profile">
+                        <img src="Shane.webp" alt="Council Member 5">
+                        <p>Shane The Wise</p>
+                    </div>
+
                 </div>
             </div>
         </section>
