--- a/index.html
+++ b/index.html
@@ -88,9 +88,18 @@
                         <p>Andrea The Unbeaten</p>
                     </div>
                     <div class="profile">
-                        <img src="Shane.webp" alt="Council Member 5">
-                        <p>Shane The Wise</p>
+                        <img src="" alt="Council Member 5">
+                        <p>Sasha</p>
                     </div>
+                    <div class="profile">
+                        <img src="" alt="Council Member 5">
+                        <p> Linda The Listener</p>
+                    </div>
+                    <div class="profile">
+                        <img src="" alt="Council Member 5">
+                        <p>Dilara</p>
+                    </div>
+                   
 
                 </div>
             </div>
